--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,66 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.0.3.RELEASE</version>
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.springframework.boot</groupId>
+
+            <artifactId>spring-boot-starter-web</artifactId>
+
+            <version>2.0.3.RELEASE</version>
+
+        </dependency>
     </dependencies>
 
 
+    <build>
+
+        <plugins>
+
+            <plugin>
+
+                <groupId>org.springframework.boot</groupId>
+
+                <artifactId>spring-boot-maven-plugin</artifactId>
+
+                <version>2.0.3.RELEASE</version>
+
+            </plugin>
+
+        </plugins>
+
+    </build>
+
+    <repositories>
+
+        <repository>
+
+            <id>spring-releases</id>
+
+            <url>https://repo.spring.io/libs-release</url>
+
+        </repository>
+
+    </repositories>
+
+    <pluginRepositories>
+
+        <pluginRepository>
+
+            <id>spring-releases</id>
+
+            <url>https://repo.spring.io/libs-release</url>
+
+        </pluginRepository>
+
+    </pluginRepositories>
 
 
 </project>
