--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,31 @@
 
             </plugin>
 
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>br.ip2.easylend.view.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
+                <configuration>
+                    <vendor>easylend</vendor>
+                    <mainClass>br.ip2.easylend.view.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
 
     </build>
@@ -86,6 +111,8 @@
         </pluginRepository>
 
     </pluginRepositories>
+
+
 
 
 </project>
